--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,18 @@
 body{
     font-family: 'Times New Roman', Times, serif;
     background-color: coral;
+    text-align: center;
 }
 h1{
     text-align: center;
 }
 p{
     margin-left: 20px;
+}
+h4{
+    font-style:italic;
+}
+#FWSFocus{
+    margin-left: 20px;
+    color: blue;
 }
