--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,6 +8,7 @@ body{
 }
 h1{
     text-align: center;
+    text-shadow: 2px 2px 4px white;
 
 }
 p{
@@ -18,7 +19,7 @@ h4{
 }
 
 #header{
-    color:white;
+    color:black;
     text-shadow: 2px 2px 4px white;
     border: 5px solid black;
     background-image: url("https://www.socorronm.org/wp-content/uploads/2012/11/bosque-del-apache.jpg");
@@ -59,5 +60,6 @@ h4{
     border: solid 1px black;
     background-color: grey;
     padding: 1px;
+    padding-bottom: 1px;
  }
 
